--- a/package.xml
+++ b/package.xml
@@ -4,14 +4,17 @@
   <name>bimini</name>
   <version>0.1.0</version>
   <description>A BIM package that can be built within ROS or standalone</description>
-  <maintainer email="maxdiekel@gmail.com">Your Name</maintainer>
+  <maintainer email="maxdiekel@gmail.com">Max Diekel</maintainer>
   <license>Apache License 2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   
   <depend>rclcpp</depend>
   <depend>std_msgs</depend>
-  <!-- Add other ROS dependencies -->
+  <depend>bimini_msgs</depend>
+
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
